welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: ')' expected but '<-' found.
if((temp1*temp2)<-99) {
                ^icyHot:6: error: illegal start of simple expression
}else{ f=false}
^icyHot:6: error: ';' expected but 'else' found.
}else{ f=false}
 ^icyHot:10: error: Unmatched closing brace '}' ignored here
 }
 ^